--- a/style/style.css
+++ b/style/style.css
@@ -17,30 +17,30 @@
 
 h4{
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 35px;
 }
 input[type="text"]{
-width: 40%;
-margin-left: 35px;
-float: left;
+	width: 40%;
+	margin-left: 35px;
+	float: left;
 }
 input[type="password"]{
-width: 40%;
-margin-left: 35px;
-float: left;
-position: relative;
-margin-top: -20px;
-}
-.radio{
-	display: block;
-	min-height: 20px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	padding-left: 20px;
-	width: 25%;
+	width: 40%;
+	margin-left: 35px;
 	float: left;
 	position: relative;
-	margin-left: 168px;
+	margin-top: -20px;
+}
+.radio{
+display: block;
+min-height: 20px;
+margin-top: 10px;
+margin-bottom: 10px;
+padding-left: 20px;
+float: left;
+position: relative;
+width: 40%;
+margin-left: 10%;
 }
 .radio+.radio, .checkbox+.checkbox{
 	margin-top:10px;
@@ -51,7 +51,10 @@ margin-top: -20px;
 	float: left;
 	margin-bottom: 20px;
 }
-.final{
-	width:100%;
+.centerbtn{
+	float: left;
+	position: relative;
 	text-align: center;
+	width: 100%;
+	margin-top:20px;
 }
